--- a/tex/collecting-specimens.tex
+++ b/tex/collecting-specimens.tex
@@ -1,7 +1,7 @@
-\chapter{Collecting Specimens} % see BIO LASM
+\chapter{Collecting Specimens} \index{Specimens! collecting}% see BIO LASM
 
 
-\section{Methods of Collecting and Displaying}
+\section{Methods of Collecting and Displaying} \index{Displays} \index{Visual aids}
 
 \begin{multicols}{2}
 
@@ -113,7 +113,7 @@ or other reptiles?
 
 \columnbreak
 
-\subsection{Aquarium Box}
+\subsection{Aquarium Box} \index{Aquarium}
 
 \begin{center}
 \includegraphics[width=0.49\textwidth]{./img/vso/aquarium.jpg}
@@ -161,11 +161,11 @@ the place you found them.
 %\onehalfspacing
 
 
-\section{O-Level Biology Specimens}
+\section{O-Level Biology Specimens} \index{Specimens! O-level} \index{Classification}
 
 When teaching Classification, we will need a variety of organisms that may not always be available. Below is information about each Kingdom, Phylum, and Class on the O-level syllabus  and how to collect, preserve, kill, and dissect examples in each.
 
-\subsection{Kingdom Fungi}
+\subsection{Kingdom Fungi} \index{Kingdom! Fungi}
 The following are features of Kingdom Fungi:
 \begin{enumerate}
 \item{They have no roots, stems, or leaves.}
@@ -219,7 +219,7 @@ Keep yeast in an air-tight container.
 
 \pagebreak
 
-\subsection{Kingdom Plantae}
+\subsection{Kingdom Plantae} \index{Kingdom! Plantae}
 Organisms in Kingdom Plantae are eukaryotic. Kingdom Plantae is very large and contains many plants.
 Although organisms in this group look very different, they all get their nutrition from a process called photosynthesis. Photosynthesis is a way to manufacture food from simple materials with the help of the sun.
  The following are features of Kingdom Plantae:
@@ -329,7 +329,7 @@ Hibiscus flowers can be easily dissected using a razor blade to identify the rep
 
 \pagebreak
 
-\subsection{Kingdom Animalia}
+\subsection{Kingdom Animalia} \index{Kingdom! Animalia}
 Organisms in Kingdom Animalia are eukaryotic. There are many organisms and phyla in Kingdom Animalia. However, for practical purposes, students will only study Phylum Platyhelminthes, Annelida, Nematoda, Arthropda, and Chordata.\\
 The following are the features of Kingdom Animalia:
 \begin{enumerate}
