--- a/tex/hiv-awareness.tex
+++ b/tex/hiv-awareness.tex
@@ -1,4 +1,4 @@
-\chapter{HIV/AIDS Awareness}
+\chapter{HIV/AIDS Awareness} \index{HIV! awareness}
 
 This section was originally prepared for the Biology Sourcebook of the Mzumbe Book Project by Mr. M. Sawaya of the Inspectorate, Ministry of Education and Culture, Dar es Salaam.
 
@@ -280,7 +280,7 @@ must be used to curb those fears that can lead to discriminatory behaviour again
 with AIDS. The rights of people with AIDS must be weighed and protected within the
 framework of disease prevention and with relation to the rights of those not infected.
 
-\section{Condoms} 
+\section{Condoms} \index{Condoms}
 \label{sec:condoms}
 
 A condom is a thin sheath that is placed over the erect penis to retain semen upon
