--- a/tex/i-activities_classification.tex
+++ b/tex/i-activities_classification.tex
@@ -1,4 +1,4 @@
-\section{Classification of Living Things}
+\section{Classification of Living Things} \index{Classification}
 
 \begin{multicols}{2}
 
@@ -112,7 +112,7 @@ different characteristics as possible.}
 \vfill
 \columnbreak
 
-\subsection{Display Boards} % VSO 19, Source
+\subsection{Display Boards} \index{Displays} \index{Visual aids} % VSO 19, Source
 
 \begin{center}
 \includegraphics[width=0.49\textwidth]{./img/source/displays.png}
