--- a/tex/i-activities_health-immunity.tex
+++ b/tex/i-activities_health-immunity.tex
@@ -1,4 +1,4 @@
-\section{Health and Immunity}
+\section{Health and Immunity} \index{Health! and immunity}
 
 \begin{multicols}{2}
 
@@ -112,7 +112,7 @@ more complex solution if diarrhea persists.}
 \vfill
 \columnbreak
 
-\subsection{HIV Acting} % VSO 59
+\subsection{HIV Acting} \index{HIV! activities} % VSO 59
 
 \begin{center}
 \includegraphics[width=0.4\textwidth]{./img/vso/hiv-acting.jpg}
