--- a/tex/i-activities_intro-bio.tex
+++ b/tex/i-activities_intro-bio.tex
@@ -1,9 +1,9 @@
-\section{Introduction to Biology}
+\section{Introduction to Biology} \index{Biology! introduction}
 
 \begin{multicols}{2}
 
 
-\section*{Characteristics of Living \hfill \\ Things}
+\section*{Characteristics of Living \hfill \\ Things} \index{Living things}
 
 
 \subsection[Obvious Characteristics of Living Things]{Obvious Characteristics of \hfill \\ Living Things} % Source 10, LASM
@@ -72,10 +72,10 @@ and cannot reproduce itself.}
 
 %==================================================================================================%
 
-\section*{Measurement in Biology}
+\section*{Measurement in Biology} \index{Measurement}
 
 
-\subsection{Data on Height} % Source 17
+\subsection{Data on Height} % Source 17 
 
 \begin{center}
 \includegraphics[width=0.45\textwidth]{./img/source/data-height.png}
@@ -101,7 +101,7 @@ most individuals are near the middle of this range.}
 \vfill
 \columnbreak
 
-\subsection{Data on Pulse Rate}
+\subsection{Data on Pulse Rate} \index{Pulse rate|textbf}
 
 \begin{center}
 \includegraphics[width=0.4\textwidth]{./img/source/data-pulse.png}
@@ -123,7 +123,7 @@ generally reach a higher pulse rate, which takes longer to return to normal.}
 %\item[Notes:]{}
 \end{description*}
 
-\subsection{Measuring Growth}
+\subsection{Measuring Growth} \index{Growth}
 
 \begin{center}
 \includegraphics[width=0.4\textwidth]{./img/source/data-growth.png}
@@ -145,7 +145,7 @@ data graphically.}
 %\item[Notes:]{}
 \end{description*}
 
-\subsection[Weight Increase by Germinating Seeds]{Weight Increase by \hfill \\ Germinating Seeds}
+\subsection[Weight Increase by Germinating Seeds]{Weight Increase by \hfill \\ Germinating Seeds} \index{Germination}
 
 \begin{center}
 \includegraphics[width=0.45\textwidth]{./img/source/data-weight.png}
@@ -193,10 +193,10 @@ the daily loss of water in each container.}
 
 %==================================================================================================%
 
-\section*{The Scientific Method}
+\section*{The Scientific Method} \index{Scientific method}
 
 
-\subsection{Transport of Water} % Source 17
+\subsection{Transport of Water} \index{Transport} % Source 17 
 
 \begin{center}
 \includegraphics[width=0.45\textwidth]{./img/source/sci-meth-ink-plant.png}
@@ -273,7 +273,7 @@ To reduce excessive water losses by transpiration, special methods of cultivatio
 \end{multicols}
 
 
-\subsection{Hand Washing}
+\subsection{Hand Washing} \index{Hand washing}
 
 %\begin{center}
 %\includegraphics[width=0.4\textwidth]{./img/source/.jpg}
@@ -306,7 +306,7 @@ Food colour & & \\ \hline
 \pagebreak
 
 
-\subsection{Lung Capacity}
+\subsection{Lung Capacity} \index{Lung capacity|textbf}
 
 \begin{center}
 \includegraphics[width=0.4\textwidth]{./img/source/lung-capacity.png}
