--- a/tex/i-activities_safety-environment.tex
+++ b/tex/i-activities_safety-environment.tex
@@ -1,12 +1,12 @@
-\section{Safety in Our Environment}
+\section{Safety in Our Environment} \index{Safety}
 
 \begin{multicols}{2}
 
 
-\section*{Waste Disposal}
+\section*{Waste Disposal} \index{Waste disposal}
 
 
-\subsection{Biodegradable Waste} % banana, bottle, etc in a hole
+\subsection{Biodegradable Waste} \index{Biodegradable materials} % banana, bottle, etc in a hole
 
 %\begin{center}
 %\includegraphics[width=0.4\textwidth]{./img/.png}
@@ -67,7 +67,7 @@
 
 \vfill
 
-\subsection{Water Purity Surveys}
+\subsection{Water Purity Surveys} \index{Water! purity}
 
 \begin{center}
 \includegraphics[width=0.4\textwidth]{./img/source/water-purity.jpg}
