--- a/tex/ii-activities_gaseous-exchange-respiration.tex
+++ b/tex/ii-activities_gaseous-exchange-respiration.tex
@@ -1,9 +1,9 @@
-\section{Gaseous Exchange and Respiration}
+\section{Gaseous Exchange and Respiration} 
 
 \begin{multicols}{2}
 
 
-\section*{Gas Exchange in Mammals}
+\section*{Gas Exchange in Mammals} \index{Gas exchange! in mammals} \index{Mammals! gas exchange in}
 
 
 \subsection{Breathing Model} % VSO 34
@@ -29,7 +29,7 @@ cut base end using string or a rubber band. (Optional: Fix a straw through the b
 \item[Notes:]{Tell students that this model does not show the expansion and contraction of the rib cage with breathing.}
 \end{description*}
 
-\subsection{Lung Capacity}
+\subsection{Lung Capacity} \index{Lung capacity}
 
 \begin{center}
 \includegraphics[width=0.4\textwidth]{./img/vso/lung-capacity.jpg}
@@ -122,10 +122,10 @@ blood cells) on the drawing. Colour the bottle caps red inside and blue outside.
 
 %==================================================================================================%
 
-\section*{Gas Exchange in Plants}
+\section*{Gas Exchange in Plants} \index{Gas exchange! in plants} \index{Plants! gas exchange in}
 
 
-\subsection{Germinating Seeds} % Source 113
+\subsection{Germinating Seeds} \index{Germination} % Source 113
 
 \begin{center}
 %\includegraphics[width=0.4\textwidth]{./img/source/germinating-seeds.png}
@@ -151,7 +151,7 @@ liquid. Seal the jar well and leave it to stand for a few hours.}
 
 %==================================================================================================%
 
-\section*{Respiration}
+\section*{Respiration} \index{Respiration}
 
 
 \subsection{Respiration Cards} % VSO 36
@@ -199,7 +199,7 @@ photosynthesis.}
 %\item[Notes:]{}
 \end{description*}
 
-\subsection{Exhaling \textbf{CO}$_\textbf{2}$} % VSO 34 Shika 107
+\subsection{Exhaling \textbf{CO}$_\textbf{2}$} \index{Carbon dioxide! in respiration} % VSO 34 Shika 107
 
 \begin{center}
 \includegraphics[width=0.4\textwidth]{./img/vso/exhale-co2.jpg}
@@ -240,7 +240,7 @@ carbonate.}
 
 \columnbreak
 
-\subsection{Fermenting Fruits} % Source 114
+\subsection{Fermenting Fruits} \index{Fermentation} % Source 114
 
 \begin{center}
 \includegraphics[width=0.4\textwidth]{./img/source/fermenting-fruits.png}
