--- a/tex/ii-activities_nutrition.tex
+++ b/tex/ii-activities_nutrition.tex
@@ -1,4 +1,4 @@
-\section{Nutrition}
+\section{Nutrition} \index{Nutrition}
 
 \begin{multicols}{2}
 
@@ -10,7 +10,7 @@
 \section*{Properties of Food Substances}
 
 
-\subsection{Lipids - Fats and Oils} % VSO 26
+\subsection{Lipids - Fats and Oils} \index{Lipids} % VSO 26
 
 \begin{center}
 \includegraphics[width=0.45\textwidth]{./img/vso/lipids.jpg}
@@ -54,7 +54,7 @@ fat droplets.}
 %\item[Notes:]{}
 \end{description*}
 
-\subsection{Carbohydrates} % VSO 26
+\subsection{Carbohydrates} \index{Carbohydrates} % VSO 26
 
 \begin{center}
 \includegraphics[width=0.4\textwidth]{./img/vso/carbohydrates.jpg}
@@ -105,7 +105,7 @@ chain of pupils. Each long chain is formed by smaller units which represent simp
 %\item[Notes:]{}
 \end{description*}
 
-\subsection{Protein Molecules} % VSO 26
+\subsection{Protein Molecules} \index{Proteins} % VSO 26
 
 \begin{center}
 \includegraphics[width=0.49\textwidth]{./img/vso/proteins.jpg}
@@ -155,11 +155,11 @@ shapes from paper or card.}
 
 %==================================================================================================%
 
-\section*{Food Tests}
+\section*{Food Tests} \index{Food Tests}
 %\textbf{*NECTA PRACTICAL*}
 
 
-\subsection{Test for Lipids} % VSO 27, LASM 70
+\subsection{Test for Lipids} \index{Lipids}% VSO 27, LASM 70
 
 \begin{center}
 \includegraphics[width=0.45\textwidth]{./img/vso/food-test-lipids.jpg}
@@ -180,7 +180,7 @@ shapes from paper or card.}
 
 \columnbreak
 
-\subsection{Test for Protein} % VSO 27
+\subsection{Test for Protein} \index{Proteins} % VSO 27
 
 \begin{center}
 \includegraphics[width=0.45\textwidth]{./img/vso/food-test-protein.jpg}
@@ -199,7 +199,7 @@ shapes from paper or card.}
 %\item[Notes:]{}
 \end{description*}
 
-\subsection{Test for Starch} % VSO 27
+\subsection{Test for Starch} \index{Starch} % VSO 27
 
 \begin{center}
 \includegraphics[width=0.4\textwidth]{./img/vso/food-test-starch.jpg}
@@ -221,7 +221,7 @@ shapes from paper or card.}
 
 \columnbreak
 
-\subsection{Test for Reducing Sugars} % VSO 27
+\subsection{Test for Reducing Sugars} \index{Reducing sugars} % VSO 27
 
 \begin{center}
 \includegraphics[width=0.25\textwidth]{./img/vso/food-test-reducing.jpg}
@@ -246,7 +246,7 @@ the presence of sugar.}
 %\item[Notes:]{}
 \end{description*}
 
-\subsection[Test for Non-Reducing Sugars]{Test for Non-Reducing \hfill \\ Sugars}
+\subsection[Test for Non-Reducing Sugars]{Test for Non-Reducing \hfill \\ Sugars} \index{Non-reducing sugars}
 
 %\begin{center}
 %\includegraphics[width=0.4\textwidth]{./img/.png}
@@ -269,7 +269,7 @@ the presence of sugar.}
 
 %==================================================================================================%
 
-\section*{Human Digestive System}
+\section*{Human Digestive System} \index{Digestive system}
 
 
 \subsection{Models for Digestion} % VSO 27
@@ -343,7 +343,7 @@ component amino acids.}
 %%\item[Notes:]{}
 %\end{description*}
 
-\subsection{Invisible Saliva Ink} % VSO 29, Source 61
+\subsection{Invisible Saliva Ink} \index{Saliva} % VSO 29, Source 61
 
 \begin{center}
 \includegraphics[width=0.4\textwidth]{./img/source/saliva-ink.png}
@@ -383,7 +383,7 @@ carbon dioxide.}
 %\item[Notes:]{}
 \end{description*}
 
-\subsection{Swallowing Upside Down} % Shika 220, Source 64
+\subsection{Swallowing Upside Down} \index{Peristalsis} % Shika 220, Source 64
 
 \begin{center}
 \includegraphics[width=0.35\textwidth]{./img/source/peristalsis.png}
@@ -521,7 +521,7 @@ tooth decay.}
 
 %==================================================================================================%
 
-\section*{Nutrition in Plants}
+\section*{Nutrition in Plants} \index{Plants! nutrition}
 
 
 \subsection{Nutrients from Soil} % Source 76
@@ -547,7 +547,7 @@ salts.}
 %\item[Notes:]{}
 \end{description*}
 
-\subsection{Photosynthesis Model} % VSO 38
+\subsection{Photosynthesis Model} \index{Photosynthesis} % VSO 38
 
 \begin{center}
 \includegraphics[width=0.45\textwidth]{./img/vso/photo-model.jpg}
@@ -632,7 +632,7 @@ can be absorbed and they die.}
 %\item[Notes:]{}
 \end{description*}
 
-\subsection{Extracting Chlorophyll} % Source 74
+\subsection{Extracting Chlorophyll} \index{Chlorophyll} % Source 74
 
 \begin{center}
 \includegraphics[width=0.2\textwidth]{./img/source/chlorophyll-extract.png}
@@ -680,7 +680,7 @@ green.}
 %\item[Notes:]{}
 \end{description*}
 
-\subsection{$\mathrm{\textbf{C}\textbf{O}_\textbf{2}}$ and Photosynthesis} % VSO 39, LASM 84
+\subsection{$\mathrm{\textbf{C}\textbf{O}_\textbf{2}}$ and Photosynthesis} \index{Carbon dioxide! and photosynthesis} % VSO 39, LASM 84
 
 \begin{center}
 \includegraphics[width=0.35\textwidth]{./img/vso/co2-photo.jpg}
@@ -710,7 +710,7 @@ taken place.}
 
 \columnbreak
 
-\subsection[Starch as a Product of Photosynthesis]{Starch as a Product of \hfill \\ Photosynthesis} % Source 75
+\subsection[Starch as a Product of Photosynthesis]{Starch as a Product of \hfill \\ Photosynthesis} \index{Starch! and photosynthesis}% Source 75
 
 \begin{center}
 \includegraphics[width=0.4\textwidth]{./img/source/photo-starch.png}
@@ -737,7 +737,7 @@ photosynthesis can take place, so no starch is produced.}
 \vfill
 \columnbreak
 
-\subsection[Oxygen as a Product of Photosynthesis]{Oxygen as a Product of \hfill \\ Photosynthesis} % Source 74
+\subsection[Oxygen as a Product of Photosynthesis]{Oxygen as a Product of \hfill \\ Photosynthesis} \index{Oxygen! and photosynthesis} % Source 74
 
 \begin{center}
 \includegraphics[width=0.4\textwidth]{./img/source/photo-gas.png}
@@ -825,7 +825,7 @@ leaves, which rise and collect in the bottle neck.}
 
 %==================================================================================================%
 
-\section*{Food Preservation} 
+\section*{Food Preservation} \index{Preservatives}
 
 
 \subsection{Food Preservatives} % Bill Nye
