--- a/tex/ii-activities_transport.tex
+++ b/tex/ii-activities_transport.tex
@@ -1,9 +1,9 @@
-\section{Transport of Materials in Living Things}
+\section{Transport of Materials in Living Things} \index{Transport|textbf}
 
 \begin{multicols}{2}
 
 
-\section*{Diffusion}
+\section*{Diffusion} \index{Diffusion}
 
 
 \subsection{Diffusion in Liquids}
@@ -42,7 +42,7 @@
 
 %==================================================================================================%
 
-\section*{Osmosis}
+\section*{Osmosis} \index{Osmosis}
 
 
 
@@ -112,7 +112,7 @@ pieces and then place each in a dish of water for an hour or so.}
 %\item[Notes:]{}
 \end{description*}
 
-\subsection[Osmosis/Active Transport Model]{Osmosis/Active Transport \hfill \\ Model} % Source 79
+\subsection[Osmosis/Active Transport Model]{Osmosis/Active Transport \hfill \\ Model} \index{Active transport}% Source 79
 
 \begin{center}
 \includegraphics[width=0.45\textwidth]{./img/vso/active-transport.jpg}
@@ -226,11 +226,11 @@ flaccid), the `stoma' closes.}
 
 %==================================================================================================%
 
-\section*{Transport in Mammals}
+\section*{Transport in Mammals} \index{Transport! in mammals} \index{Mammals! transport in}
 
 %==================================================================================================%
 
-\section*{The Mammalian Heart}
+\section*{The Mammalian Heart}  \index{Heart}
 
 
 \subsection{Heart Pump Action} % VSO 32
@@ -283,11 +283,11 @@ which pump blood into arteries.}
 
 %==================================================================================================%
 
-\section*{Blood Vessels}
+\section*{Blood Vessels} \index{Blood! vessels}
 
 %==================================================================================================%
 
-\subsection{Measuring Pulse} % VSO 32
+\subsection{Measuring Pulse} \index{Pulse rate}% VSO 32
 
 \begin{center}
 \includegraphics[width=0.4\textwidth]{./img/vso/measuring-pulse.jpg}
@@ -379,7 +379,7 @@ capillaries.}
 
 %==================================================================================================%
 
-\section*{Blood}
+\section*{Blood} \index{Blood}
 
 %==================================================================================================%
 
@@ -414,7 +414,7 @@ down items at different shops
 
 \columnbreak
 
-\subsection{Red and White Blood Cell Models} % VSO 30
+\subsection{Red and White Blood Cell Models} \index{Blood! cells} % VSO 30
 
 \begin{center}
 \includegraphics[width=0.49\textwidth]{./img/vso/red-white-model.jpg}
@@ -520,7 +520,7 @@ represent the fibrin network }
 
 \columnbreak
 
-\subsection{Transfusion Checkers} % VSO 31
+\subsection{Transfusion Checkers} \index{Transfusion} % VSO 31
 
 \begin{center}
 \includegraphics[width=0.49\textwidth]{./img/vso/transfusion-checkers.jpg}
@@ -569,7 +569,7 @@ call correctly wins the 2 cards. The player with the most cards wins the game.}
 
 %==================================================================================================%
 
-\section*{Blood Circulation}
+\section*{Blood Circulation} \index{Blood! circulation}
 
 
 \subsection{Circulation Game} % VSO 33
@@ -603,10 +603,10 @@ also act as heart valves.}
 
 %==================================================================================================%
 
-\section*{Transport in Plants}
+\section*{Transport in Plants} \index{Plants! transport in} \index{Transport! in plants}
 
 
-\subsection{Xylem and Phloem Game} % VSO 41
+\subsection{Xylem and Phloem Game} \index{Xylem} \index{Phloem} % VSO 41
 
 \begin{center}
 \includegraphics[width=0.4\textwidth]{./img/vso/xylem-phloem.jpg}
@@ -670,7 +670,7 @@ mineral salts.}
 
 \columnbreak
 
-\subsection{Capillary Rise}
+\subsection{Capillary Rise} \index{Capillarity}
 
 \begin{center}
 \includegraphics[width=0.4\textwidth]{./img/source/capillary-glass.jpg}
@@ -751,7 +751,7 @@ action. Capillary rise results from adhesion, allowing the liquid to climb along
 %%\item[Notes:]{}
 %\end{description*}
 
-\subsection{Automatic Irrigation}
+\subsection{Automatic Irrigation} \index{Irrigation}
 
 \begin{center}
 \includegraphics[width=0.3\textwidth]{./img/source/irrigation.png}
@@ -795,7 +795,7 @@ the stem.}
 %\item[Notes:]{}
 \end{description*}
 
-\subsection{Transpiration} % VSO 40
+\subsection{Transpiration} \index{Transpiration} % VSO 40
 
 \begin{center}
 \includegraphics[width=0.4\textwidth]{./img/vso/transpiration.jpg}
