--- a/tex/iii-activities_coordination.tex
+++ b/tex/iii-activities_coordination.tex
@@ -1,9 +1,9 @@
-\section{Coordination}
+\section{Coordination} \index{Coordination}
 
 \begin{multicols}{2}
 
 
-\section*{The Nervous System}
+\section*{The Nervous System} \index{Nervous system}
 
 
 \subsection{Nerve Model} % VSO 48
@@ -46,7 +46,7 @@
 
 %==================================================================================================%
 
-\section*{Reflex Actions}
+\section*{Reflex Actions} \index{Reflexes}
 
 
 %\subsection{Light in the Eye}
@@ -129,7 +129,7 @@ involuntary reflex response.}
 
 %==================================================================================================%
 
-\section*{Sense Organs}
+\section*{Sense Organs} \index{Senses}
 
 
 \subsection{Taste Map}
@@ -262,7 +262,7 @@ open.}
 
 %==================================================================================================%
 
-\section*{Coordination in Plants}
+\section*{Coordination in Plants} \index{Plants! coordination in}
 
 
 \subsection{Phototropism}
@@ -352,7 +352,7 @@ towards the porous pot (source of water).}
 %\item[Notes:]{}
 \end{description*}
 
-\subsection{Hothouses}
+\subsection{Hothouses} \index{Greenhouse}
 
 \begin{center}
 \includegraphics[width=0.4\textwidth]{./img/vso/hothouses.jpg}
