--- a/tex/iii-activities_movement.tex
+++ b/tex/iii-activities_movement.tex
@@ -1,9 +1,9 @@
-\section{Movement}
+\section{Movement} \index{Movement}
 
 \begin{multicols}{2}
 
 
-\section*{Human Skeleton}
+\section*{Human Skeleton} \index{Skeleton}
 
 
 \subsection{Paper Skeleton} % VSO 44
@@ -140,7 +140,7 @@ another piece of paper for the feet.
 %%\item[Notes:]{}
 %\end{description*}
 
-\subsection{Robotic Hand}
+\subsection{Robotic Hand} \index{Robotic hand}
 
 \begin{center}
 \includegraphics[width=0.49\textwidth]{./img/robotic-hand-use.jpg}
@@ -262,7 +262,7 @@ the finger. Cut four pieces of straw each about 2 cm long and thread them onto t
 
 %==================================================================================================%
 
-\section*{Joints}
+\section*{Joints} \index{Joints}
 
 
 \subsection{Ball and Socket}
@@ -335,7 +335,7 @@ shown.}
 
 %==================================================================================================%
 
-\section*{Muscles}
+\section*{Muscles} \index{Muscles}
 
 
 \subsection{Forearm Lever}
