--- a/tex/iii-activities_regulation.tex
+++ b/tex/iii-activities_regulation.tex
@@ -1,4 +1,4 @@
-\section{Regulation}
+\section{Regulation} \index{Regulation}
 
 \begin{multicols}{2}
 
@@ -28,7 +28,7 @@
 \vfill
 \columnbreak
 
-\subsection{Evaporation and Cooling}
+\subsection{Evaporation and Cooling} \index{Evaporation}
 
 \begin{center}
 \includegraphics[width=0.3\textwidth]{./img/source/evap-cooling.png}
