--- a/tex/iii-activities_reproduction.tex
+++ b/tex/iii-activities_reproduction.tex
@@ -1,9 +1,9 @@
-\section{Reproduction}
+\section{Reproduction} \index{Reproduction}
 
 \begin{multicols}{2}
 
 
-\subsection{Meiosis Models} % PIC!!!
+\subsection{Meiosis Models} \index{Meiosis}% PIC!!!
 
 \begin{center}
 \includegraphics[width=0.2\textwidth]{./img/vso/cross-over.jpg}
@@ -56,7 +56,7 @@ of genes.}
 
 %==================================================================================================%
 
-\section*{Reproduction in Flowering \hfill \\  Plants}
+\section*{Reproduction in Flowering \hfill \\  Plants} \index{Plants! reproduction in} 
 
 
 \subsection{Flower Structure} % VSO 51
@@ -106,7 +106,7 @@ wind or onto insects.}
 
 %==================================================================================================%
 
-\section*{Reproduction in Mammals}
+\section*{Reproduction in Mammals} \index{Mammals! reproduction in}
 
 
 \subsection{Sperm and Egg} % VSO 50
