--- a/tex/iv-activities_growth.tex
+++ b/tex/iv-activities_growth.tex
@@ -1,9 +1,9 @@
-\section{Growth}
+\section{Growth} \index{Growth}
 
 \begin{multicols}{2}
 
 
-\subsection{Mitosis Model} % VSO 53
+\subsection{Mitosis Model} \index{Mitosis}% VSO 53
 
 \begin{center}
 \includegraphics[width=0.3\textwidth]{./img/vso/mitosis-model.jpg}
@@ -35,7 +35,7 @@ of just one.}
 
 %==================================================================================================%
 
-\section*{Germination}
+\section*{Germination} \index{Germination|textbf}
 
 
 \subsection{Seed Germination} % Shika 235 combine see, avocado, potato
