--- a/tex/making-biology-solutions.tex
+++ b/tex/making-biology-solutions.tex
@@ -1,10 +1,10 @@
-\chapter{Making Biology Solutions}
+\chapter{Making Biology Solutions} \index{Solutions, making}
 Activities in the topics of Nutrition and Respiration require specific analytical solutions. In this section you will find materials and instructions on how to prepare common solutions for the Biology laboratory.
 
 %For local and low cost sources of the chemicals mentioned in these preparations, see the section on Sources of Chemicals.
 
 \begin{flushleft}
-\textbf{Benedict's Solution}
+\textbf{Benedict's Solution} \index{Benedict's solution}
 \end{flushleft}
 \vspace{-9pt}
 Description: Bright blue solution\\
@@ -15,7 +15,7 @@ Procedure: Dissolve 5 teaspoons of sodium carbonate, 3 teaspoons of citric acid,
 and one teaspoon of copper sulphate in half a litre of water. Shake until everything is fully dissolved.\\Note: The addition of the citric acid and sodium carbonate should be done slowly as they cause effervescence when mixed quickly.\\
 
 \begin{flushleft}
-\textbf{Calcium Hydroxide Solution (Lime Water)}
+\textbf{Calcium Hydroxide Solution (Lime Water)} \index{Calcium hydroxide} \index{Lime water|see{Calcium hydroxide}}
 \end{flushleft}
 \vspace{-9pt}
 Description: Opaque white liquid\\
@@ -26,7 +26,7 @@ Procedure: Add 3 spoonfuls of white cement into about half a litre of water. Sti
 %need this hack to get citric acid title on the next page
 %\newpage
 \begin{flushleft}
-\textbf{Citric Acid Solution}
+\textbf{Citric Acid Solution} \index{Citric acid}
 \end{flushleft}
 \vspace{-9pt}
 Description: Colourless solution\\
@@ -35,7 +35,7 @@ Procedure: Dissolve 2 1/2 spoonfuls of citric acid in half a litre of water.\\
 
 
 \begin{flushleft}
-\textbf{Copper Sulphate Solution}
+\textbf{Copper Sulphate Solution} \index{Copper sulphate}
 \end{flushleft}
 \vspace{-9pt}
 Description: Light blue solution\\
@@ -45,7 +45,7 @@ Hazard: Copper ions are poisonous if they enter the body. Use tools to avoid con
 Procedure: Dissolve 1 spoonful of \ce{CuSO4} crystals in 1/2 litre of water. Dissolve the \ce{CuSO4} completely.\\
 
 \begin{flushleft}
-\textbf{Iodine Solution}
+\textbf{Iodine Solution} \index{Iodine}
 \end{flushleft}
 \vspace{-9pt}
 Description: Light brown solution\\
@@ -65,7 +65,7 @@ Procedure: Dilute 1 part concentrated iodine tincture with 9 parts water. Keep t
 %one more hack to keep titles tidy
 %\newpage
 \begin{flushleft}
-\textbf{Sodium Hydroxide Solution}
+\textbf{Sodium Hydroxide Solution} \index{Sodium hydroxide}
 \end{flushleft}
 \vspace{-9pt}
 Description: Slightly cloudy white solution\\
