--- a/shika-bio.tex
+++ b/shika-bio.tex
@@ -78,4 +78,9 @@
 
 \input{./tex/activity-template.tex}
 
+\clearpage
+\phantomsection
+\addcontentsline{toc}{chapter}{Index}
+\printindex
+
 \end{document}
