--- a/tex/i-activities_cell-structure-organization.tex
+++ b/tex/i-activities_cell-structure-organization.tex
@@ -1,4 +1,4 @@
-\section{Cell Structure and Organization}
+\section{Cell Structure and Organization} \index{Cells! structure and organization}
 
 \begin{multicols}{2}
 
@@ -102,7 +102,7 @@ slide through the microscope.}
 
 \columnbreak
 
-\subsection{Simple Microscope} % VSO 23
+\subsection{Simple Microscope} \index{Microscope} % VSO 23
 
 \begin{center}
 %\includegraphics[width=0.49\textwidth]{./img/vso/microscope.jpg}
