--- a/tex/ii-activities_balance-nature.tex
+++ b/tex/ii-activities_balance-nature.tex
@@ -1,4 +1,4 @@
-\section{Balance of Nature}
+\section{Balance of Nature} \index{Nature, balance of}
 
 \begin{multicols}{2}
 
@@ -8,7 +8,7 @@
 \section*{The Natural Environment}
 
 
-\subsection{Camouflage and Protection} % VSO 57
+\subsection{Camouflage and Protection} \index{Camouflage} % VSO 57
 
 \begin{center}
 \includegraphics[width=0.45\textwidth]{./img/vso/camouflage-protection.jpg}
@@ -66,7 +66,7 @@ every 10 minutes.}
 
 \columnbreak
 
-\subsection{Reactions to Humidity}
+\subsection{Reactions to Humidity} \index{Humidity}
 
 \begin{center}
 \includegraphics[width=0.25\textwidth]{./img/vso/reactions-humidity.jpg}
@@ -120,7 +120,7 @@ darkness?}
 %%\item[Notes:]{}
 %\end{description*}
 
-\subsection{Aquarium} % Shika 227 
+\subsection{Aquarium} \index{Aquarium} % Shika 227 
 
 \begin{center}
 \includegraphics[width=0.49\textwidth]{./img/vso/aquarium.jpg}
@@ -160,7 +160,7 @@ darkness?}
 %\item[Notes:]{}
 %\end{description*}
 
-\subsection{Terrarium} % Shika 227 VSO 123 pic
+\subsection{Terrarium} \index{Terrarium} % Shika 227 VSO 123 pic
 
 \begin{center}
 \includegraphics[width=0.4\textwidth]{./img/vso/terrarium.jpg}
@@ -181,10 +181,10 @@ darkness?}
 
 %==================================================================================================%
 
-\section*{Interaction of Living and \hfill \\ Non-Living Things}
+\section*{Interaction of Living and \hfill \\ Non-Living Things} \index{Living things! interaction of}
 
 
-\subsection{Carbon Cycle Cards} % VSO 56
+\subsection{Carbon Cycle Cards} \index{Carbon cycle} \index{Storage} % VSO 56
 
 \begin{center}
 \includegraphics[width=0.45\textwidth]{./img/vso/carbon-cycle.jpg}
@@ -212,7 +212,7 @@ fuels.}
 
 \columnbreak
 
-\subsection{Water Cycle} 
+\subsection{Water Cycle} \index{Water! cycle} \index{Storage}
 
 \begin{center}
 \includegraphics[width=0.49\textwidth]{./img/source/water-cycle.jpg}
@@ -231,7 +231,7 @@ fuels.}
 %\item[Notes:]{}
 \end{description*}
 
-\subsection{Nitrogen Cycle}
+\subsection{Nitrogen Cycle} \index{Nitrogen! cycle} \index{Storage}
 
 \begin{center}
 \includegraphics[width=0.49\textwidth]{./img/source/nitrogen-cycle.jpg}
@@ -267,7 +267,7 @@ important fertilizers.}
 
 %==================================================================================================%
 
-\section*{Food Chains and Food Webs}
+\section*{Food Chains and Food Webs} \index{Food chains} \index{Food webs}
 
 
 \subsection{Food Chain Links} % VSO 56
