--- a/tex/iv-activities_genetics.tex
+++ b/tex/iv-activities_genetics.tex
@@ -1,4 +1,4 @@
-\section{Genetics}
+\section{Genetics} \index{Genetics} \index{DNA}
 
 \begin{multicols}{2}
 
@@ -130,7 +130,7 @@ cytosine with guanine.}
 
 %==================================================================================================%
 
-\section*{Inheritance}
+\section*{Inheritance} \index{Inheritance}
 
 
 \subsection{Mendelian Inheritance} % Shika 231 PIC!!!
